force-app/main/default/objects/Log__c/fields/Batch_Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Batch_Exception_Type__c</fullName>
    <label>Batch Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>