force-app/main/default/objects/Log__c/fields/Quiddity__c.field-meta.xml
<CustomField>
    <fullName>Quiddity__c</fullName>
    <label>Quiddity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anonymous</fullName>
            </value>
            <value>
                <fullName>Aura</fullName>
            </value>
            <value>
                <fullName>Batch Acs</fullName>
            </value>
            <value>
                <fullName>Batch Apex</fullName>
            </value>
            <value>
                <fullName>Batch Chunk Parallel</fullName>
            </value>
            <value>
                <fullName>Batch Chunk Serial</fullName>
            </value>
            <value>
                <fullName>Bulk Api</fullName>
            </value>
            <value>
                <fullName>Commerce Integration</fullName>
            </value>
            <value>
                <fullName>Discoverable Login</fullName>
            </value>
            <value>
                <fullName>Function Callback</fullName>
            </value>
            <value>
                <fullName>Future</fullName>
            </value>
            <value>
                <fullName>Inbound Email Service</fullName>
            </value>
            <value>
                <fullName>Invocable Action</fullName>
            </value>
            <value>
                <fullName>IoT</fullName>
            </value>
            <value>
                <fullName>Post Install Script</fullName>
            </value>
            <value>
                <fullName>Queueable</fullName>
            </value>
            <value>
                <fullName>Quick Action</fullName>
            </value>
            <value>
                <fullName>Remote Action</fullName>
            </value>
            <value>
                <fullName>REST</fullName>
            </value>
            <value>
                <fullName>Runtest Async</fullName>
            </value>
            <value>
                <fullName>Runtest Deploy</fullName>
            </value>
            <value>
                <fullName>Runtest Sync</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>SOAP</fullName>
            </value>
            <value>
                <fullName>Synchronous</fullName>
            </value>
            <value>
                <fullName>Transaction Finalizer Queueable</fullName>
            </value>
            <value>
                <fullName>Visualforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>