force-app/main/default/objects/Log__c/fields/Records_In_Scope__c.field-meta.xml
<CustomField>
    <fullName>Records_In_Scope__c</fullName>
    <label>Records In Scope</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>