force-app/main/default/objects/Log__c/recordTypes/Apex_Log.recordType-meta.xml
<RecordType>
    <fullName>Apex_Log</fullName>
    <active>true</active>
    <label>Apex Log</label>
</RecordType>