force-app/main/default/objects/Log__c/recordTypes/Async_Log.recordType-meta.xml
<RecordType>
    <fullName>Async_Log</fullName>
    <active>true</active>
    <description>Used for errors generated by an asyncrhounous context. Such as Batch, Future, Queables.</description>
    <label>Async Log</label>
</RecordType>