force-app/main/default/objects/Log__c/recordTypes/Batch_Log.recordType-meta.xml
<RecordType>
    <fullName>Batch_Log</fullName>
    <active>true</active>
    <label>Batch Log</label>
</RecordType>