force-app/main/default/objects/Log__c/recordTypes/Flow_Log.recordType-meta.xml
<RecordType>
    <fullName>Flow_Log</fullName>
    <active>true</active>
    <label>Flow Log</label>
</RecordType>