force-app/main/default/objects/Log__c/recordTypes/Invocable_Log.recordType-meta.xml
<RecordType>
    <fullName>Invocable_Log</fullName>
    <active>true</active>
    <description>Record Type for logs that are generated in an Invocable Quiddity Context</description>
    <label>Invocable Log</label>
</RecordType>