force-app/main/default/objects/Log__c/recordTypes/Standard_Log.recordType-meta.xml
<RecordType>
    <fullName>Standard_Log</fullName>
    <active>true</active>
    <description>For Generalised Logs</description>
    <label>Standard Log</label>
</RecordType>