force-app/main/default/objects/Log__c/listViews/All_Flow_Logs.listView-meta.xml
<ListView>
    <fullName>All_Flow_Logs</fullName>
    <columns>NAME</columns>
    <columns>Severity__c</columns>
    <columns>Running_User__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Log__c.Invocable_Log</value>
    </filters>
    <label>All Flow Logs</label>
</ListView>